--- a/ChuckPilot.Api/ChuckPilot.Api.csproj
+++ b/ChuckPilot.Api/ChuckPilot.Api.csproj
@@ -13,8 +13,8 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.16.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.0.0" />
-    <PackageReference Include="Microsoft.KernelMemory.Client" Version="0.10.231118.1-preview" />
     <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.12.231127.1-preview" />
+    <PackageReference Include="Microsoft.KernelMemory.WebClient" Version="0.12.231128.1-preview" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.0.0-beta8" />
   </ItemGroup>
   <ItemGroup>
